--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
-<!DOCTYPE HTML>
-<html>
-  <body>
-    <h1>Exercice 1 - Cours 2</h1>
-    <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbX18o-kexynvlA5lgaNy0U5fmi-XQZEyTjZPVpPvAUzkpDHVjEqyoQ8lmWrSc8nmn-LIXur3tpkC/pubchart?oid=1841404629&amp;format=interactive"></iframe>
-    <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbX18o-kexynvlA5lgaNy0U5fmi-XQZEyTjZPVpPvAUzkpDHVjEqyoQ8lmWrSc8nmn-LIXur3tpkC/pubchart?oid=1876975954&amp;format=interactive"></iframe>
-    <br>
-    <h2><a href="exercice2.html">Exercice 2</a></h2>
-    <h2><a href="exercice3.html">Exercice 3</a></h2>
-  <body>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercices</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        nav {
+            background-color: #444;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            margin: 0 20px;
+        }
+        .exercice-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .exercice {
+            margin: 20px;
+        }
+        iframe {
+            width: 600px;
+            height: 371px;
+            border: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Exercices</h1>
+    </header>
+    <nav>
+        <a href="exercice1.html">Exercice 1</a>
+        <a href="exercice2.html">Exercice 2</a>
+        <a href="exercice3.html">Exercice 3</a>
+    </nav>
+    <div class="exercice-container">
+        <div class="exercice">
+            <h2>Exercice 1</h2>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbX18o-kexynvlA5lgaNy0U5fmi-XQZEyTjZPVpPvAUzkpDHVjEqyoQ8lmWrSc8nmn-LIXur3tpkC/pubchart?oid=1841404629&amp;format=interactive"></iframe>
+        </div>
+        <div class="exercice">
+            <h2>Exercice 2</h2>
+            <!-- Ajoutez le contenu de l'exercice 2 ici -->
+        </div>
+        <div class="exercice">
+            <h2>Exercice 3</h2>
+            <!-- Ajoutez le contenu de l'exercice 3 ici -->
+        </div>
+    </div>
+</body>
+</html>
