--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
     <div class="exercice-container">
         <div class="exercice">
             <h2>Exercice 1</h2>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbX18o-kexynvlA5lgaNy0U5fmi-XQZEyTjZPVpPvAUzkpDHVjEqyoQ8lmWrSc8nmn-LIXur3tpkC/pubchart?oid=1841404629&amp;format=interactive"></iframe>
-        </div>
+<iframe src="https://query.wikidata.org/embed.html#%23Ch%C3%A8vre%0ASELECT%20%3Fitem%20%3FitemLabel%20%0AWHERE%20%0A%7B%0A%20%20%3Fitem%20wdt%3AP31%20wd%3AQ2934.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>        </div>
     </div>
 </body>
 </html>
