--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <body>
             <h2>Exercice 1</h2>
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbX18o-kexynvlA5lgaNy0U5fmi-XQZEyTjZPVpPvAUzkpDHVjEqyoQ8lmWrSc8nmn-LIXur3tpkC/pubchart?oid=1876975954&amp;format=interactive"></iframe></body>
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbX18o-kexynvlA5lgaNy0U5fmi-XQZEyTjZPVpPvAUzkpDHVjEqyoQ8lmWrSc8nmn-LIXur3tpkC/pubchart?oid=1876975954&amp;format=interactive"></iframe>
+    <br>
+    <h2><a href="exercice2.html">Exercice 2</a></h2>
+    <h2><a href="exercice3.html">Exercice 3</a></h2>
+
+</body>
 </html>
