--- a/Exercice2.html
+++ b/Exercice2.html
@@ -1,15 +1,9 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Exercice 2 - Séance 3</title>
-  </head>
+
   <body>
     <h1>Exercice 2</h1>
-    <iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20%3Fwriter%20%3FwriterLabel%20%3Fdate_of_birth%20%3Fplace_of_birth%20%3Fplace_of_birthLabel%20%3Fimage%20%3Fcoordinate_location%20WHERE%20%7B%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%20%20%3Fwriter%20wdt%3AP106%20wd%3AQ36180%3B%0A%20%20%20%20wdt%3AP27%20wd%3AQ142.%0A%20%20OPTIONAL%20%7B%20%3Fwriter%20wdt%3AP569%20%3Fdate_of_birth.%20%7D%0A%20%20OPTIONAL%20%7B%20%3Fwriter%20wdt%3AP19%20%3Fplace_of_birth.%20%7D%0A%20%20%3Fwriter%20wdt%3AP18%20%3Fimage.%0A%20%20OPTIONAL%20%7B%20%3Fwriter%20wdt%3AP19%20%3Fcoordinate_location.%20%7D%0A%7D%0ALIMIT%20100" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
-    <p>Voici un tableau que j'ai récupéré à partir d'un données sur Wikidata</p>
+          <a>Les tableau du wikidata</a>
+<iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#%23Maires%20qui%20sont%20de%20nature%20animal%20domestique%0A%23title%3A%20Mayors%20that%20are%20any%20kind%20of%20domesticated%20animal%0ASELECT%20%3Fimage%20%3FspeciesLabel%20%3FmayorLabel%20%3FplaceLabel%20WHERE%20%7B%0A%20%20%3Fspecies%20wdt%3AP279*%20wd%3AQ622852%20.%0A%20%20%3Fmayor%20wdt%3AP31%20%3Fspecies%20.%20%0A%20%0A%20%20%3Fmayor%20p%3AP39%20%3Fnode%20.%0A%20%20%3Fnode%20ps%3AP39%20wd%3AQ30185%20.%0A%20%20%3Fnode%20pq%3AP642%20%3Fplace%20.%0A%20%20OPTIONAL%20%7B%3Fmayor%20wdt%3AP18%20%3Fimage%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe> 
     <br>
-    <iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20%3Fbig_city%20%3Fbig_cityLabel%20%3Fpopulation%20%3Fcontinent%20%3FcontinentLabel%20WHERE%20%7B%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%20%20%3Fbig_city%20wdt%3AP31%20wd%3AQ1549591.%0A%20%20OPTIONAL%20%7B%20%3Fbig_city%20wdt%3AP1082%20%3Fpopulation.%20%7D%0A%20%20%3Fbig_city%20wdt%3AP30%20%3Fcontinent.%20%0A%7D%0ALIMIT%20100" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
-    
+<iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#%23Toutes%20les%20langues%20avec%20un%20code%20de%20langue%20Wikimedia%0A%23title%3A%20All%20languages%20with%20a%20Wikimedia%20language%20code%20(P424)%0A%23%20Date%3A%202021-09-24%0ASELECT%20DISTINCT%20%3Flang_code%20%3FitemLabel%20%3Fitem%0AWHERE%0A%7B%0A%20%20%23%20%3Flang%20is%20one%20of%20these%20options%0A%20%20VALUES%20%3Flang%20%7B%0A%20%20%20%20wd%3AQ34770%20%20%20%23%20language%0A%20%20%20%20wd%3AQ436240%20%20%23%20ancient%20language%0A%20%20%20%20wd%3AQ1288568%20%23%20modern%20language%0A%20%20%20%20wd%3AQ33215%20%20%20%23%20constructed%20language%0A%20%20%7D%0A%20%20%3Fitem%20wdt%3AP31%20%3Flang%20%3B%0A%20%20%20%20%23%20get%20the%20language%20code%0A%20%20%20%20wdt%3AP424%20%3Flang_code%20.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D%20ORDER%20BY%20%3Flang_code" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
   </body>
-<html>
+
