--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <br>
     <h2><a href="Exercice2.html">Exercice 2</a></h2>
     <h2><a href="Exercice3.html">Exercice 3</a></h2>
+            <h2><a href="Exercice4.html">Exercice 4</a></h2>
+             <h2><a href="Exercice5.html">Exercice 5</a></h2>
 
 </body>
 
