--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <h2><a href="Exercice4.html">Exercice 4</a></h2>
              <h2><a href="Exercice5.html">Exercice 5</a></h2>
             <h2><a href="Exercice6.html">Exercice 6</a></h2>
+            <h2><a href="Exercice7.html">Exercice 7</a></h2>
 
 </body>
 
